<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sorting"
        android:icon="@drawable/ic_round_sort_24"
        android:title="@string/menu_sorting"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_date_asc"
                android:title="@string/old_first"
                android:checkable="true"
                android:checked="true"/>
            <item
                android:id="@+id/sort_date_desc"
                android:title="@string/new_first"
                android:checkable="true"/>
            <item
                android:id="@+id/sort_name"
                android:title="@string/in_alphabet_order"
                android:checkable="true"/>
        </menu>
    </item>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_round_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/menu_search"/>
</menu>